a whole bunch of changes, incompletely implemented?
- responsive css
- fixing post parsing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,5 @@
     "display": "standalone",
     "prefer_related_applications": false,
     "background_color": "white",
-    "theme_color": "blue"
+    "theme_color": "white"
 }
