--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,5 @@
     "display": "standalone",
     "prefer_related_applications": false,
     "background_color": "white",
-    "theme_color": "white"
+    "theme_color": "#4f8ac9"
 }
