--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "better-sqlite3": "^11.3.0",
+    "compression": "^1.7.4",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "marked": "^14.1.2",
