--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "marked": "^14.1.2",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "web-push": "^3.6.7"
   }
 }
