--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "backblaze-b2": "^1.7.0",
     "better-sqlite3": "^11.3.0",
     "compression": "^1.7.4",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "marked": "^14.1.2",
