--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "marked": "^14.1.2",
     "multer": "^2.0.2",
     "path": "^0.12.7",
+    "sanitize-html": "^2.17.0",
     "web-push": "^3.6.7"
   }
 }
